k8s/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hodor-deny-egress-to-bran
spec:
  podSelector:
    matchLabels:
      app: hodor
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: hodor
